README.md modifier