@@ -1,1 +1,24 @@
 # Pac-Man-PjTut
+
+//////////////////////////////////////////////
+
+Pour lancer le programme dans INTELIJ IDEA 
+
+1 - Telecharger la bibliothèque javaFX
+ 
+2 - Ajouter la ligne ci dessous aux VM options
+
+Pour changer les VM options RUN -> EDIT CONFIGURATION : 
+
+    --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.media
+
+//////////////////////////////////////////////
+
+Programe créer par :
+
+- Antoine JEAN
+- Julien ERHARD
+- Celia LEICHTNAM
+- Thibaut MAGNIN
+- Yohann MARCHAND
+- Noé MENTION
